GPB-82 - Separate the search functionality for game stores from the web service
https://game-price-bot.atlassian.net/browse/GPB-82